--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,10 @@ body {
     position: relative;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 .category-section {
     margin: 5px 0;
     width: auto;
@@ -44,7 +48,7 @@ body {
 }
 
 .title-tile img {
-    height: 100%;
+    height: 100%
 }
 
 .active {
@@ -56,3 +60,57 @@ body {
     max-width: 346px;
     box-shadow: 0 0 1em;
 }
+
+#modal-bg {
+    width: 100%;
+    height: 100%;
+    background:rgba(255,255,255,0.5);
+    vertical-align: middle;
+    text-align: center;
+    z-index: 25;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.modal-content {
+    height: 300px;
+    width: 450px;
+    min-height: 300px;
+    min-width: 450px;
+    background-color: #FFFFFF;
+    border: solid 2px #000000;
+    border-radius: 10px;
+    position: relative;
+    margin: 25px auto;
+    padding: 20px;
+}
+
+.modal-content img {
+    width: 80%;
+}
+
+.modal-title {
+    width: 100%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1.5em;
+    color: #113CCF;
+}
+
+.modal-rating {
+    width: 100%;
+    text-align: right;
+    font-style: italic;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+.modal-footer {
+    width: 100%;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: .75em;
+    text-align: center;
+    bottom: 0;
+    position: absolute;
+    padding-bottom: 5px;
+}
+
